# PTN101x

./: .gitignore  CMakeLists.txt  README.md  git_log.txt  readme.md
CMake/: compiler_options.cmake  cross_compilation.cmake  include_path.cmake  search_functions.cmake
controller/hal/hw/: hw_memcpy_impl.c
host/bluetooth/core/: hci_internal.h  l2cap_internal.h  sco_internal.h
host/bluetooth/include/: bluetooth.h  bt_avctp_proto.h  bt_avdtp.h  bt_avdtp_proto.h  bt_rfcomm.h  bt_rfcomm_proto.h  bt_sco.h  bt_sdp.h
host/bluetooth/service/: sdp_profile.h  sdp_provider.h  sdp_server.h  uuid-private.h
host/config/: config.h  config_debug.h  config_system.h
host/include/: jos.h  os_common.h  uw_compiler.h  uw_event.h  uw_types.h
host/jos/: jinit.c  jos_bus.c  jos_device.c  jos_driver.c  jos_entry.c  jos_event.c  jos_general.c  jos_internal.h  jos_mbuf.c  jos_mem.c  jos_sync.c
host/jos/include/: jos_device.h  jos_secure_ptr.h  jos_stdlib.h  jos_strings.h
host/jos/utils/: jos_secure_ptr.c
host/libs/AAC/: aac_decoder_api.h
host/libs/AEC/: aec.h  aec_fft.h
host/libs/FatLib/: app_fs.h  disk_io.c  diskio.h  ff.c  ff.h  ffconf.h  ffsystem.c  ffunicode.c  playmode.c  playmode.h
host/libs/Mp3Lib/: asmmisc.S  bitstream.c  bkmp3_resample.c  bkmp3_resample.h  buffers.c  coder.h  dct32.c  dequant.c  dqchan.c  huffman.c  imdct.c  layer21.c  mp3_encoder.h  mp3_play.c  mp3common.h  mp3dec.c  mp3dec.h  mp3tabs.c  scalfact.c  stproc.c  subband.c  trigtabs.c
host/libs/RESAMPLE/: api_src.c  api_src.h  src.h
host/libs/asrc/: audio_spc.c  audio_spc.h
host/libs/sbc/: amr_vad.c  basic_op.c  basic_op.h  count.c  count.h  jheaders.h  sbc_common.c  sbc_common.h  sbc_decoder.c  sbc_decoder.h  sbc_decoder_soft.c  sbc_decoder_soft.h  sbc_encoder.c  sbc_encoder.h
host/port/audio/: app_aud_amp_det.c  app_aud_amp_det.h  aud_include.h  fft_ba22.c  fft_ba22.h  utils_audio.c  utils_audio.h  utils_volume.c
host/port/beken_app/: app_aec.c  app_aec.h  app_anc.c  app_anc.h  app_asm_hfp_mic_eq.S  app_asm_hfp_spk_eq.S  app_asm_sw_eq.S  app_asm_sw_eq.h  app_async_data_stream.c  app_async_data_stream.h  app_beken_includes.h  app_bt.c  app_bt.h  app_bt_connect.c  app_bt_connect.h  app_bt_management.c  app_bt_management.h  app_button.c  app_button.h  app_charge.c  app_charge.h  app_customer.c  app_customer.h  app_debug.c  app_debug.h  app_drc.c  app_drc.h  app_ear_in.c  app_ear_in.h  app_env.c  app_env.h  app_equ.c  app_equ.h  app_exception.c  app_fat.c  app_fat.h  app_hfp.c  app_hfp.h  app_led.c  app_led.h  (+22 more)
host/port/beken_ctrl/: Bt_ctrl_app.c  bt_ctrl_app.h
host/port/beken_driver/: Driver_vusb.c  Main.c  PTN101_calibration.c  PTN101_calibration.h  audio_sync.c  audio_sync.h  bautil.h  beken_external.h  bkreg.h  board.h  bootloader.c  driver_audio.c  driver_audio.h  driver_beken_includes.h  driver_dma.c  driver_dma.h  driver_efuse.c  driver_efuse.h  driver_flash.c  driver_flash.h  driver_gpio.c  driver_gpio.h  driver_i2c1.c  driver_i2c1.h  driver_i2s.c  driver_i2s.h  driver_icu.c  driver_icu.h  driver_ota.c  driver_ota.h  driver_pwm.c  driver_pwm.h  driver_ringbuff.c  driver_ringbuff.h  driver_rtc.c  driver_rtc.h  driver_saradc.c  driver_saradc.h  driver_sdcard.c  driver_sdcard.h  (+24 more)
host/sys/: sys_irq.c
projects/app_full_fun/: .cproject  .project  clean_build.bat  project_description.cmake  ram.ld
(+851 files in other folders)
